dotCMS/core#18706 Fix dot relationship misalignment (#1596)

--- a/src/app/view/components/dot-relationship-tree/dot-relationship-tree.component.scss
+++ b/src/app/view/components/dot-relationship-tree/dot-relationship-tree.component.scss
@@ -32,7 +32,7 @@
     & > li::after {
         background: $gray-light;
         width: 1px;
-        height: 1.4rem;
+        height: 1.3rem;
         content: "•";
         position: absolute;
         top: 1.4rem;
